dataset1235/2025-2/2318198438/users/1324664027/executions/2601575092_1467685783.log
== SUBMISSION (2025-08-12 00:46:23)
-- CODE: 
print(20*35)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:21:06)
-- CODE: 
print(20*35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:20:59)
-- CODE: 
prin(20*35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(20*35)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(20*35)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
